使用placeholder属性替换搜索框hint功能

--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
             </div>
             <div class="nav-search-box">
                 <form class="search" action="#" method="get">
-                    <input class="search__input" type="text" name="keyword" value="B站平均学历又提高了？"
-                        onfocus="if(this.value=='B站平均学历又提高了？'){this.value='';this.style.color='#000';}"
-                        onblur="if(this.value==''){this.value='B站平均学历又提高了？';this.style.color='#999'}">
+                    <input placeholder="B站平均学历又提高了" class="search__input" type="text" name="keyword">
                     <input class="search__btn iconfont" type="button" value="&#xe72c;">
                 </form>
             </div>
