添加左右浮动栏，还有锚点

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         </div>
     </div>
     <div class="promote">
-        <div class="extension">
+        <div id="ext" class="extension">
             <div class="storey-title">
                 <div class="storey-title__svg-icon"></div>
                 <a href="#" class="storey-title__name">推广</a>
@@ -358,6 +358,19 @@
         </div>
     </div>
     <div class="footer"></div>
+    <div class="contact">
+        联系客服
+    </div>
+    <div class="global-index">
+        <i class="iconfont">&#xe74f;</i>
+        <div class="global-index__list">
+            <a href="#ext" class="global-index__item">推广</a>
+            <a href="#" class="global-index__item">动画</a>
+            <a href="#" class="global-index__item">番剧</a>
+            <a href="#" class="global-index__item">国创</a>
+            <a href="#" class="global-index__item">漫画</a>
+        </div>
+    </div>
 </body>
 
 </html>
