--- a/index.html
+++ b/index.html
@@ -357,6 +357,89 @@
             <img class="bypb-window__ad" src="./img/abc.jpg" alt="ad">
         </div>
     </div>
+
+    <div class="promote">
+        <div id="id_2" class="extension">
+            <div class="storey-title">
+                <div class="storey-title__svg-icon"></div>
+                <a href="#" class="storey-title__name">推广</a>
+                <div class="storey-text-info">
+                    <a href="#" class="storey-text-info__link">
+                        <i class="iconfont">&#xe743;</i>鬼畜素材竟在我身边！
+                    </a>
+                </div>
+            </div>
+            <div class="ext-box">
+                <div class="ext-card">
+                    <img class="ext-card__img" src="./img/ext_1.jpg" alt="">
+                    <div class="ext-card__title">你见过身披祥云的鸭子吗？</div>
+                    <div class="up"><i class="iconfont">&#xe741;</i>何胜0423</div>
+                </div>
+                <div class="ext-card">
+                    <img class="ext-card__img" src="./img/ext_1.jpg" alt="">
+                    <div class="ext-card__title">18年前的童年小游戏，竟然有这么震撼的剧情？！</div>
+                    <div class="up"><i class="iconfont">&#xe741;</i>何胜0423</div>
+                </div>
+                <div class="ext-card">
+                    <img class="ext-card__img" src="./img/ext_1.jpg" alt="">
+                    <div class="ext-card__title">你见过身披祥云的鸭子吗？</div>
+                    <div class="up"><i class="iconfont">&#xe741;</i>何胜0423</div>
+                </div>
+                <div class="ext-card">
+                    <img class="ext-card__img" src="./img/ext_1.jpg" alt="">
+                    <div class="ext-card__title">你见过身披祥云的鸭子吗？</div>
+                    <div class="up"><i class="iconfont">&#xe741;</i>何胜0423</div>
+                </div>
+            </div>
+        </div>
+        <div class="ranking-list">
+            <div class="ranking-list__header">
+                <a class="ranking-list__title">排行榜</a>
+                <a href="#" class="ranking-list__more">更多<i class="iconfont">&#xe73b;</i></a>
+            </div>
+            <div class="ranking-list__list">
+                <div class="ranking-item">
+                    <span class="ranking-item__num">1</span>
+                    <div class="ranking-item__preview">
+                        <img class="ranking-item__img" src="./img/preview.webp" alt="preview">
+                        <div class="ranking-item__txt">
+                            <a class="ranking-item__link" href="#">【又 在 你 家 安 监 控 !】</a>
+                            <span>综合得分：198.8万</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="ranking-item">
+                    <span class="ranking-item__num">2</span>
+                    <a class="ranking-item__link ranking-item__link--no-preview" href="#">耗时五个月！从零制作出等身可动八重神子</a>
+                </div>
+                <div class="ranking-item">
+                    <span class="ranking-item__num">3</span>
+                    <a class="ranking-item__link ranking-item__link--no-preview" href="#">我们真的把这个游戏做出来了</a>
+                </div>
+                <div class="ranking-item">
+                    <span class="ranking-item__num ranking-item__num--simple">4</span>
+                    <a class="ranking-item__link ranking-item__link--no-preview" href="#">你会嫌弃女友是智障吗？</a>
+                </div>
+                <div class="ranking-item">
+                    <span class="ranking-item__num ranking-item__num--simple">4</span>
+                    <a class="ranking-item__link ranking-item__link--no-preview" href="#">当 代 青 年 消 费 现 状 4.0</a>
+                </div>
+                <div class="ranking-item">
+                    <span class="ranking-item__num ranking-item__num--simple">4</span>
+                    <a class="ranking-item__link ranking-item__link--no-preview" href="#">当 代 青 年 消 费 现 状 4.0</a>
+                </div>
+                <div class="ranking-item">
+                    <span class="ranking-item__num ranking-item__num--simple">4</span>
+                    <a class="ranking-item__link ranking-item__link--no-preview" href="#">当 代 青 年 消 费 现 状 4.0</a>
+                </div>
+                <div class="ranking-item">
+                    <span class="ranking-item__num ranking-item__num--simple">4</span>
+                    <a class="ranking-item__link ranking-item__link--no-preview" href="#">当 代 青 年 消 费 现 状 4.0</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="footer"></div>
     <div class="contact">
         联系客服
@@ -365,7 +448,7 @@
         <i class="iconfont">&#xe74f;</i>
         <div class="global-index__list">
             <a href="#ext" class="global-index__item">推广</a>
-            <a href="#" class="global-index__item">动画</a>
+            <a href="#id_2" class="global-index__item">动画</a>
             <a href="#" class="global-index__item">番剧</a>
             <a href="#" class="global-index__item">国创</a>
             <a href="#" class="global-index__item">漫画</a>
